--- a/style.css
+++ b/style.css
@@ -4,3 +4,45 @@ body {
   text-align: center;
   font-family: 'Lato', sans-serif;
 }
+
+.nav-bar{
+  display: flex;
+  justify-content: center;
+  border: 3px black solid;
+  width: 600px;
+  margin-left: auto;
+  margin-right: auto;
+  justify-content: space-around;
+  font-family:'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
+}
+
+.first-child{
+ margin-right: 250px;
+}
+
+.contact-form{
+  display: none;
+  flex-direction: column;
+  justify-content: flex-start;
+  width: 500px;
+  text-align: left;
+  margin-left: auto;
+  margin-right: auto;
+}
+
+.contact-form h2{
+  text-align: center;
+}
+
+.message{
+  margin-bottom: -8px
+}
+
+#book-list{
+  
+}
+
+a:link, a:visited, a:active{
+  text-decoration: none;
+  
+}
