--- a/style.css
+++ b/style.css
@@ -39,7 +39,9 @@ body {
 }
 
 #book-list{
-  
+  border: 3px solid black;
+  display: flex;
+  flex-direction: column;
 }
 
 a:link, a:visited, a:active{
