--- a/style.css
+++ b/style.css
@@ -40,9 +40,25 @@ body {
 
 #book-list{
   border: 3px solid black;
-  display: flex;
-  flex-direction: column;
+  width: 500px;
+  margin-left: auto;
+  margin-right: auto;
+  
 }
+
+.container{
+  display: flex;
+  justify-content: center;
+  border: 1px  solid black;
+  align-items: center;
+ height: 20px;
+}
+
+.container button {
+  height: 20px;
+  margin-left: auto;
+}
+
 
 a:link, a:visited, a:active{
   text-decoration: none;
