--- a/style.css
+++ b/style.css
@@ -7,7 +7,6 @@ body {
 
 .nav-bar{
   display: flex;
-  justify-content: center;
   border: 3px black solid;
   width: 600px;
   margin-left: auto;
@@ -63,4 +62,15 @@ body {
 a:link, a:visited, a:active{
   text-decoration: none;
   
+}
+
+footer{
+  margin-top: 30px;
+  border: 3px black solid;
+  width: 600px;
+  text-align: left;
+  margin-left: auto;
+  margin-right: auto;
+  padding: 10px;
+  font-family:'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
 }
